--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@
     border-radius: 10px;
     margin-bottom: 10px;
 }
-
+ header{
+     text-align: center;
+     width: 50%;
+     margin: 0 auto;
+ }
 form{
     width:50%;
 }
@@ -24,5 +28,10 @@ form{
 }
 
 .output div{
-    margin: 30px 0px
+    margin: 35px 0px
+}
+
+.title{
+    font-weight: bold;
+    font-size:24px;
 }
